Update gradle build config

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java'
-    id 'eclipse'
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.0.1"
+    id 'signing'
+    id 'maven-publish'
 }
 
 group = 'dev.ursinn.velocity.nici'
 version = '1.0-SNAPSHOT'
+description = 'VelocityNiciManagement'
 
 repositories {
     mavenCentral()
@@ -53,3 +55,74 @@ sourceSets.main.java.srcDir(generateTemplates.map { it.outputs })
 
 rootProject.idea.project.settings.taskTriggers.afterSync generateTemplates
 project.eclipse.synchronizationTasks(generateTemplates)
+
+// Javadoc
+javadoc {
+    if(JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
+}
+
+// Publishing Stack - Start
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'management'
+            from components.java
+            pom {
+                packaging = 'jar'
+                name = 'VelocityNiciManagement'
+                description = 'Management Plugin'
+                url = 'https://github.com/ursinn/velocity-nici-management'
+                inceptionYear = '2022'
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://github.com/ursinn/velocity-nici-management/blob/main/LICENSE'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'ursinn'
+                        name = 'Ursin Filli'
+                        email = 'mail@ursinn.dev'
+                        timezone = '+1'
+                        url = 'https://ursinn.dev'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/ursinn/velocity-nici-management.git'
+                    developerConnection = 'scm:git:git@github.com:ursinn/velocity-nici-management.git'
+                    url = 'https://github.com/ursinn/velocity-nici-management'
+                }
+                issueManagement {
+                    system = 'GitHub Issues'
+                    url = 'https://github.com/ursinn/velocity-nici-management/issues'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2'
+            def snapshotsRepoUrl = 'https://s01.oss.sonatype.org/content/repositories/snapshots'
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            credentials {
+                username ossrhS01Username
+                password ossrhS01Password
+            }
+        }
+    }
+}
+
+signing {
+    useGpgCmd()
+    sign publishing.publications.mavenJava
+}
+
+// Publishing Stack - End
