--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'eclipse'
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.0.1"
     id 'signing'
     id 'maven-publish'
@@ -55,6 +56,9 @@ sourceSets.main.java.srcDir(generateTemplates.map { it.outputs })
 
 rootProject.idea.project.settings.taskTriggers.afterSync generateTemplates
 project.eclipse.synchronizationTasks(generateTemplates)
+
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 // Javadoc
 javadoc {
